kubernetes/yml/zipkin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: springbootzipkin-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: springbootzipkin
    spec:
      containers:
      - name: springbootzipkin
#        image: marcinkasinski/springbootzipkin
        image: openzipkin/zipkin        
        ports:
        - name: http
          containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: springbootzipkin
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: TracingService
      name: tracing
      service: springbootzipkin:7777
      driver: zipkin
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  springbootzipkin_mapping
      prefix: /springbootzipkin
      timeout_ms: 10000
      service: springbootzipkin.apps:7777
      ---
      #apiVersion: ambassador/v0
      #kind:  Mapping
      #name:  zipkin_redirect_mapping
      #prefix: /zipkin/
      #timeout_ms: 10000
      #service: ambassador:31380
      #host_redirect: true
      #path_redirect: /springbootzipkin/zipkin
      ---
spec:
  type: NodePort
  ports:
  - port: 7777
    targetPort: 9411
    protocol: TCP
    name: http
  selector:
    app: springbootzipkin
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootzipkin-ingress
spec:
  rules:
  - host: zipkin
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootzipkin
          servicePort: 7777
